--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1,3 +1,20 @@
 @import
   "bootstrap-variables",                  // See _bootstrap-variables.scss
   "../_vendor/bootstrap/scss/bootstrap";  // See _vendor/bootstrap/scss/bootstrap.scss
+@import "nav";
+@import "custom";
+
+header{
+  background-color: lightgray;
+}
+
+blockquote{
+  margin-top: 50px;
+  margin-left: 900px;
+  width: 300px;
+  color: darkgoldenrod;
+}
+
+#blok2{
+  background-color: lightblue;
+}
