--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -297,6 +297,10 @@
 	}
 }
 
+#gek{
+	float: right;
+}
+
 /*
    Page footer
    ========================================================================== */
